# flatbed

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  REVIEW.md
.claude/skills/implement/: SKILL.md
.claude/skills/next/: SKILL.md
.claude/skills/pr/: skill.md
.claude/skills/review/: SKILL.md
.claude/skills/spec/: SKILL.md
.claude/skills/topr/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  claude-review.yml  issue-notifications.yml  pr-notifications.yml  publish.yml  release-bin.yml  release-notifications.yml
crates/flatbed/: Cargo.toml  README.md  build.rs
crates/flatbed/examples/: routes.rs
crates/flatbed/schemas/: test.fbs
crates/flatbed/src/: context.rs  k8s.rs  kv.rs  lib.rs  nats.rs
crates/flatbed/src/hyper/: endpoints.rs  mod.rs  router.rs  server.rs  service.rs  shutdown.rs
crates/flatbed/src/telemetry/: config.rs  mod.rs  prometheus.rs  service.rs  types.rs
crates/flatbed/tests/: flatbuffer_enum.rs  flatbuffer_table_vector.rs  hyper_integration.rs  reconciler_tests.rs
crates/flatbed_build/: Cargo.toml
crates/flatbed_build/src/: codegen.rs  compile.rs  fbs_types.rs  lib.rs  reflection.rs  source_order.rs
crates/flatbed_macros/: Cargo.toml
crates/flatbed_macros/src/: lib.rs  main_macro.rs
examples/: README.md
examples/context-worker/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
examples/context-worker/schemas/: info.fbs
examples/context-worker/src/: main.rs
examples/minimal-ping/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
examples/minimal-ping/schemas/: ping.fbs
examples/minimal-ping/src/: main.rs
examples/openapi/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
examples/openapi/schemas/: api.fbs
examples/openapi/src/: main.rs
examples/telemetry/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  prometheus.yml
examples/telemetry/src/: main.rs
scripts/: check-flatc-version.sh  check-generated.sh
