[workspace]
resolver = "2"
members = [
    "crates/flatbed",
    "crates/flatbed_macros",
    "crates/flatbed_build",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plonklabs/flatbed"
authors = ["The flatbed contributors"]
rust-version = "1.80"

[workspace.dependencies]
tracing = "0.1"
