[package]
name = "flatbed_build"
description = "Build-time FlatBuffer codegen and the flatbed CLI tool"
readme = "../../README.md"
keywords = ["flatbuffers", "build-script", "codegen", "cli"]
categories = ["development-tools::build-utils", "command-line-utilities"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "flatbed"
path = "src/bin/flatbed.rs"

[dependencies]
flatc-rust = "0.2.0"
flatbuffers-reflection = "0.1"
clap = { version = "4", features = ["derive"] }
