[package]
name = "flatbed_macros"
description = "Procedural macros for the flatbed HTTP framework"
readme = "../../README.md"
keywords = ["http", "macros", "flatbuffers", "framework"]
categories = ["network-programming", "web-programming::http-server"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
