[package]
name = "flatbed-example-openapi"
version = "0.0.0"
edition = "2021"
publish = false

# Empty table: standalone package, not a member of the flatbed workspace above.
[workspace]

[dependencies]
flatbed = { path = "../../crates/flatbed", features = ["openapi"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# The flatc-generated wire-format code references these crates by name.
flatbuffers = "25.2.10"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
flatbed_build = { path = "../../crates/flatbed_build" }
